--- a/composer.json
+++ b/composer.json
@@ -4,15 +4,20 @@
   "license": "proprietary",
   "require": {
     "php": ">=7.2",
-    "spryker/kernel": "^3.30.0"
+    "spryker/kernel": "^3.33.0",
+    "spryker/data-import": "^1.10.0",
+    "spryker/merchant": "^2.0.0",
+    "spryker/merchant-product": "^0.1.0",
+    "spryker/product": "^6.0.0"
   },
   "require-dev": {
-    "spryker/code-sniffer": "*",
-    "spryker/testify": "*"
+    "spryker/testify": "*",
+    "spryker/propel": "*"
   },
   "autoload": {
     "psr-4": {
-      "Spryker\\": "src/Spryker/"
+      "Spryker\\": "src/Spryker/",
+      "SprykerTest\\Shared\\MerchantProductDataImport\\Helper\\": "tests/SprykerTest/Shared/MerchantProductDataImport/Helper/"
     }
   },
   "minimum-stability": "dev",
