--- a/composer.json
+++ b/composer.json
@@ -1,19 +1,20 @@
 {
   "name": "spryker/merchant-product-data-import",
+  "type": "library",
   "description": "MerchantProductDataImport module",
-  "license": "proprietary",
+  "license": "MIT",
   "require": {
     "php": ">=7.2",
-    "spryker/kernel": "^3.33.0",
     "spryker/data-import": "^1.10.0",
+    "spryker/kernel": "^3.33.0",
     "spryker/merchant": "^2.0.0",
     "spryker/merchant-product": "^0.1.0",
     "spryker/product": "^6.0.0"
   },
   "require-dev": {
-    "spryker/testify": "*",
+    "spryker/code-sniffer": "*",
     "spryker/propel": "*",
-    "spryker/code-sniffer": "*"
+    "spryker/testify": "*"
   },
   "autoload": {
     "psr-4": {
@@ -21,11 +22,16 @@
       "SprykerTest\\Shared\\MerchantProductDataImport\\Helper\\": "tests/SprykerTest/Shared/MerchantProductDataImport/Helper/"
     }
   },
+  "autoload-dev": {
+    "psr-4": {
+      "SprykerTest\\": "tests/SprykerTest/"
+    }
+  },
   "minimum-stability": "dev",
   "prefer-stable": true,
   "scripts": {
-    "cs-check": "phpcs -p -s --standard=vendor/spryker/code-sniffer/Spryker/ruleset.xml src/ tests/",
-    "cs-fix": "phpcbf -p --standard=vendor/spryker/code-sniffer/Spryker/ruleset.xml src/ tests/"
+    "cs-check": "phpcs -p -s --standard=vendor/spryker/code-sniffer/SprykerStrict/ruleset.xml src/ tests/",
+    "cs-fix": "phpcbf -p --standard=vendor/spryker/code-sniffer/SprykerStrict/ruleset.xml src/ tests/"
   },
   "extra": {
     "branch-alias": {
