--- a/composer.json
+++ b/composer.json
@@ -5,11 +5,24 @@
     "license": "proprietary",
     "require": {
         "php": ">=8.2",
-        "spryker/data-import": "^1.10.0",
-        "spryker/kernel": "^3.33.0",
+        "spryker/category": "^5.0.0",
+        "spryker/currency": "^4.5.0",
+        "spryker/data-import": "^1.29.0",
+        "spryker/kernel": "^3.76.0",
         "spryker/merchant": "^3.0.0",
+        "spryker/merchant-file-extension": "^0.1.0",
         "spryker/merchant-product": "^1.0.0",
-        "spryker/product": "^6.0.0"
+        "spryker/merchant-stock": "^1.0.0",
+        "spryker/price-product": "^4.0.0",
+        "spryker/product": "^6.0.0",
+        "spryker/product-category": "^4.0.0",
+        "spryker/product-image": "^3.18.0",
+        "spryker/product-search": "^5.23.0",
+        "spryker/propel-orm": "^1.21.0",
+        "spryker/stock": "^8.13.0",
+        "spryker/tax": "^5.0.0",
+        "spryker/transfer": "^3.27.0",
+        "spryker/url": "^3.0.0"
     },
     "require-dev": {
         "spryker/code-sniffer": "*",
