CC-36111: Stabilization (GA): File-based Product Data Import from Merchant Portal UI (#11723)
Stabilization (GA): File-based Product Data Import from Merchant Portal UI

--- a/tests/SprykerTest/Zed/MerchantProductDataImport/codeception.yml
+++ b/tests/SprykerTest/Zed/MerchantProductDataImport/codeception.yml
@@ -27,3 +27,6 @@ suites:
                 - \SprykerTest\Zed\Merchant\Helper\MerchantHelper
                 - \SprykerTest\Shared\Product\Helper\ProductDataHelper
                 - \SprykerTest\Shared\Testify\Helper\TableRelationsCleanupHelper
+                - \SprykerTest\Shared\Stock\Helper\StockDataHelper
+                - \SprykerTest\Zed\MerchantStock\Helper\MerchantStockHelper
+                - \SprykerTest\Zed\Testify\Helper\BusinessHelper
