--- a/composer.json
+++ b/composer.json
@@ -5,15 +5,18 @@
     "license": "proprietary",
     "require": {
         "php": ">=8.3",
+        "spryker/availability": "^9.30.0",
         "spryker/category": "^5.0.0",
         "spryker/currency": "^4.5.0",
         "spryker/data-import": "^1.30.0",
         "spryker/data-import-merchant-extension": "^1.0.0",
+        "spryker/decimal-object": "^1.0.2",
         "spryker/kernel": "^3.76.0",
         "spryker/locale": "^4.0.0",
         "spryker/merchant": "^3.15.0",
         "spryker/merchant-product": "^1.0.0",
         "spryker/merchant-stock": "^1.0.0",
+        "spryker/oms": "^11.0.0",
         "spryker/price-product": "^4.0.0",
         "spryker/product": "^6.0.0",
         "spryker/product-attribute": "^1.2.1",
